--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -16,20 +16,22 @@ The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal 
 
 The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only larger individuals occuring at depths deeper than 300 m. Data collected by the NWFSC Shelf-Slope survey between depths of 55 - 549 m and north of $42^circ$ and south of $49^circ$ were stratified to generate an index of abundance from 2003-2016. The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year and vessel effects had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_qq}).  The indices for the NWFSC shelf-slope survey show a tentative decline in the population between 2003 and 2009, with an increasing trend in biomass between the 2009 and 2016 median point estimates.
 
-Length, age, and conditional age-at-length compositions were expanded based upon the stratification.  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitment; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
+Length, age, and conditional age-at-length compositions were expanded based upon the stratification.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 \ref{tab:NWcombo_Lengths} where ages were collected for `r spp` in nearly every tow \ref{tab:NWcombo_Ages}.  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitment; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
 ###Northwest Fisheries Science Center (NWFSC) slope survey  
 
-The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception between 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using the VAST delta-GLMM model.  The estimated index of abundance is show in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  \hl{The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_slope_qq}). } The trend of abundance across the four surveys years was generally flat with high estimated annual variance.
+The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception between 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using the VAST delta-GLMM model.  The estimated index of abundance is show in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  \hl{The Q-Q plot does not show any departures from the assumed distribution (Figure XXXX}). } The trend of abundance across the four surveys years was generally flat with high estimated annual variance.
 
-Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratifcation.  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
+Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratifcation (Tables \ref{tab:NWslope_Lengths} and \ref{tab:NWslope_Ages}.  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
 
 
 ###Alaska Fisheries Science Center (AFSC) slope survey 
 
-The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 \ref{tab:AFSC_Lengths}.  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
+The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
 
-The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
+An index of abundance was estiamted based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distrubution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:afsc_qq}).  The trend in the indices was generally flat over time.
+
+Length compositions were available for each year the survey was conducted.  No age data were avaialable from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), expect for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Lengths}). 
 
 ###Triennial Bottom Trawl Survey
 
