--- a/BibFile.bib
+++ b/BibFile.bib
@@ -832,7 +832,7 @@
 	month = jan,
 	year = {2017},
 	pages = {fsw193},
-	file = {fsw193.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\RMTENKQP\\fsw193.pdf:application/pdf}
+	file = {Thorson and Barnett - 2017 - Comparing estimates of abundance trends and distri.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\RMTENKQP\\Thorson and Barnett - 2017 - Comparing estimates of abundance trends and distri.pdf:application/pdf}
 }
 
 @article{thorson_nwfscageingerror:_2012,
@@ -840,4 +840,11 @@
 	journal = {Available from: http://github.com/nwfsc-assess/nwfscAgeingError/},
 	author = {Thorson, J. T. and Stewart, Ian J. and Punt, A. E.},
 	year = {2012}
+}
+
+@techreport{ianelli_status_1992,
+	title = {Status and future prospects for the {Pacific} ocean perch resource in waters off {Washington} and {Oregon} as assessed in 1992},
+	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
+	author = {Ianelli, J. N. and Ito, Daniel H. and Wilkins, M.E.},
+	year = {1992}
 }
