--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -941,10 +941,10 @@ shelf-slope survey show a tentative decline in the population between
 
 Length, age, and conditional age-at-length compositions were expanded
 based upon the stratification. The number of tows with length data
-ranged from 33 in 2006 to 69 in 2015 \ref{tab:NWcombo_Lengths} where
-ages were collected for Pacific ocean perch in nearly every tow
-\ref{tab:NWcombo_Ages}. The expanded length frequencies from this survey
-show an increase in small fish starting in 2010 (Figure
+ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths})
+where ages were collected for Pacific ocean perch in nearly every tow
+(Table \ref{tab:NWcombo_Ages}). The expanded length frequencies from
+this survey show an increase in small fish starting in 2010 (Figure
 \ref{fig:nw_Length}). The age frequencies provide clear evidence of
 large year-classes moving through the population from the 1999, 2000,
 and 2008 recruitment; with early indications of a large 2013 recruitment
@@ -988,7 +988,7 @@ year, which surveyed from \(43^\circ\) N latitude to the U.S.-Canada
 border. Therefore, only tows from \(43^\circ\) N latitude to the
 U.S.-Canada border were used.
 
-An index of abundance was estiamted based on the data using the VAST
+An index of abundance was estimated based on the data using the VAST
 delta-GLMM model. The estimated index of abundance is shown in Table
 \ref{tab:Index_Summary}. The lognormal distrubution with random
 strata-year had the lowest AIC and was chosen as the final model. The
@@ -1011,16 +1011,15 @@ the time-frame from 1977-2004. The survey's design and sampling methods
 are most recently described in (Weinberg et al.
 \protect\hyperlink{ref-weinberg_estimation_2002}{2002}). Its basic
 design was a series of equally-spaced transects from which searches for
-tows in a specific depth range were initiated \hl{(Figure 5)}. The
-survey design has changed slightly over the period of time
-\hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted
-in the mid-summer through early fall: the 1977 survey was conducted from
-early July through late September; the surveys from 1980 through 1989
-ran from mid-July to late September; the 1992 survey spanned from
-mid-July through early October; the 1995 survey was conducted from early
-June to late August; the 1998 survey ran from early June through early
-August; and the 2001 and 2004 surveys were conducted in May-July
-\hl{(Figure 4)}.
+tows in a specific depth range were initiated. The survey design has
+changed slightly over the period of time. In general, all of the surveys
+were conducted in the mid-summer through early fall: the 1977 survey was
+conducted from early July through late September; the surveys from 1980
+through 1989 ran from mid-July to late September; the 1992 survey
+spanned from mid-July through early October; the 1995 survey was
+conducted from early June to late August; the 1998 survey ran from early
+June through early August; and the 2001 and 2004 surveys were conducted
+in May-July.
 
 Haul depths ranged from 91-457 m during the 1977 survey with no hauls
 shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the
@@ -1037,21 +1036,61 @@ Given the different depths surveyed during 1977, the data from that year
 were not included in this assessment. Water hauls (Zimmermann et al.
 \protect\hyperlink{ref-zimmermann_influence_2003}{2003}) and tows
 located in Canadian waters were also excluded from the analysis of this
-survey. The survey was analyzed as an early series (1980-1992) and a
-late series (1995-2004), as has been done in other West Coast rockfish
-assessments.
+survey. The data was examined for varying distribution of length and/or
+ages of fish based upon the shift in survey timing and little evidence
+was found of ontogenetic shifts in Pacific ocean perch during the summer
+months.Pacific ocean perch are rarely encountered south of \(40^circ\)
+where the change in southern range of the survey would have no impact on
+data collected regarding Pacific ocean perch. Given these factors the
+Triennial survey was analyzed as a single time-series a departure from
+how the previous assessment which split the time-series into and an
+early (1980-1992) and a late period (1995-2004).
 
-\hl{Describe whether the time-series was split or retained as one index}
+An index of abundance was estimated based on the data using the VAST
+delta-GLMM model. The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}. The lognormal distribution with random
+strata-year had the lowest AIC and was chosen as the final model. The
+Q-Q plot does not show any departures from the assumed distribution
+(Figure \ref{fig:tri_qq}). The index shows a decline in abundance in the
+early years of the time-series and abundance remaining flat for the
+latter years.
 
-The estimated index of abundance is shown in Table
-\ref{tab:Index_Summary}.
+Length and age compositions were expanded based upon the stratification.
+The number of tows with length data ranged from 17 in 1986 to 81 in 1998
+\ref{tab:TriennialLengths}. Ages were read using surface reading methods
+until 1989 when the break-and-burn method replaced surface reads as the
+best method to age Pacific ocean perch. Unfortunately, surface reading
+of Pacific ocean perch otoliths results in significant underestimates of
+age. Due to this, these otolith were excluded from analysis. The
+availabe ages from the Triennial survey and the number of tows where
+otoliths were collected are shown in Table \ref{tab:Triennial_Ages}. The
+expanded length frequencies from this survey show an increase in small
+fish starting in 1995 (Figure \ref{fig:Tri_Length}). The age frequencies
+provide clear evidence of large year-classes moving through the
+population from the 1999 and 2000 recruitment (Figure
+\ref{fig:Tri_Age}).
 
 \subsubsection{Pacific ocean perch
 Survey}\label{pacific-ocean-perch-survey}
 
 A survey targeted designed to sample Pacific ocean perch was conducted
-in 1979 and again in 1985. The estimated index of abundance is shown in
-Table \ref{tab:Index_Summary}.
+in 1979 and again in 1985 (for a detailed description see (Ianelli et
+al. \protect\hyperlink{ref-ianelli_status_1992}{1992}). TAn index of
+abundance was estimated based on the data using the VAST delta-GLMM
+model. The estimated index of abundance is shown in Table
+\ref{tab:Index_Summary}. The lognormal distribution with random
+strata-year had the lowest AIC and was chosen as the final model. The
+Q-Q plot does not show any departures from the assumed distribution
+(Figure \ref{fig:pop_qq}). The index shows a clear decline in abundance
+between the two survey years.
+
+Length and age compositions were expanded based on the stratification.
+The survey had 125 and 126 Pacific ocean perch tows (Table
+\ref{tab:POP_Lengths}) and ages were only availabe in 1985 due to
+surface reads for the 1979 data (Table \ref{tab:POP_Ages}). The length
+frequencies for both years are highest between the 30-45 cm range
+(Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of
+fish age 40 and greater (Figure \ref{fig:POP_Age}).
 
 \subsection{Fishery-Dependent Data}\label{fishery-dependent-data}
 
@@ -2898,7 +2937,7 @@ perch. \label{fig:Tri_Age}}
 \centering
 \includegraphics{Figures/Q-Q_plot_pop.jpg}
 \caption{Q-Q plots for the VAST lognormal distribution for the Pacific
-ocean perch survey. \label{fig:tri_qq}}
+ocean perch survey. \label{fig:pop_qq}}
 \end{figure}
 
 \FloatBarrier
@@ -3407,6 +3446,12 @@ Hoenig, J.M. 1983. Empirical use of longevity data to estimate mortality
 rates. Fishery Bulletin \textbf{82}: 898--903. Available from
 \url{http://fishbull.noaa.gov/81-4/hoenig.pdf} {[}accessed 28 February
 2017{]}.
+
+\hypertarget{ref-ianelli_status_1992}{}
+Ianelli, J.N., Ito, D.H., and Wilkins, M. 1992. Status and future
+prospects for the Pacific ocean perch resource in waters off Washington
+and Oregon as assessed in 1992. Pacific Fishery Management Council, 7700
+Ambassador Place NE, Suite 200, Portland, OR 97220.
 
 \hypertarget{ref-karnowski_historical_2014}{}
 Karnowski, M., Gertseva, V., and Stephens, A. 2014. Historical
