--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -1116,25 +1116,26 @@ Historical commercial fishery landings of Pacific ocean perch from
 Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW).
 A description of the methods can be found in Karnowski et al.
 (\protect\hyperlink{ref-karnowski_historical_2014}{2014}). Recent
-landings (1987-2016) were obtained from PacFIN retrieval dated
-\hl{March 3, 2015}, Pacific States Marine Fisheries Commission,
-Portland, Oregon; www.psmfc.org). The catch data in from the POP and
-POP2 categories contained within PacFIN for Pacific ocean perch were
-used for this assessment. Additional cathes from 1987-1999 for Pacific
-ocean perch under the UROCK category not yet available in PacFIN were
-received directly from the state and combined with the catch data
-available for that period within PacFIN.
+landings (1987-2016) were obtained from PacFIN retrieval dated May 2,
+2017\}, Pacific States Marine Fisheries Commission, Portland, Oregon;
+www.psmfc.org). The catch data in from the POP and POP2 categories
+contained within PacFIN for Pacific ocean perch were used for this
+assessment. Additional cathes from 1987-1999 for Pacific ocean perch
+under the UROCK category not yet available in PacFIN were received
+directly from the state and combined with the catch data available for
+that period within PacFIN.
 
 \textbf{California}
 
 Historical commercial fishery landings of Pacific ocean perch were
-obtained from the online database of the California Cooperative
-Groundfish Survey, also known as CALCOM (128.114.3.187) for the years
-1916-1980. A description of the methods can be found in (Ralston et al.
+obtained directly from John Field at the SWFSC due to database issues
+for the historical period for the California Cooperative Groundfish
+Survey, also known as CALCOM (128.114.3.187) for the years 1916-1980. A
+description of the methods can be found in (Ralston et al.
 \protect\hyperlink{ref-ralston_documentation_2010}{2010}). Recent
 landings (1981-2016) were obtained from PacFIN (Pacific Fisheries
-Information Network (PacFIN) retrieval dated \hl{March 3, 2015}, Pacific
-States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+Information Network (PacFIN) retrieval dated May 2, 2017, Pacific States
+Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
 
 \textbf{At-Sea Hake Fishery}
 
@@ -1216,6 +1217,23 @@ survey data.
 
 \subsubsection{Fishery Length And Age
 Data}\label{fishery-length-and-age-data}
+
+Biological data from commercial fisheries that caught Pacific ocean
+perch were extracted from PacFIN (PFSMFC) on \hl{XXXX}. Lengths taken
+during port sampling in Oregon and Washington were used to calculate
+length and age compositions. There were no biological data for Pacific
+ocean perch available within PacFIN. The overwhelming majority of these
+data were collected from the bottom trawl fishery, but there additional
+biological data were collected from non-trawl gear was grouped together
+with all data available. Tables \ref{tab:Comm_Lengths} and
+\ref{tab:Comm_Ages} show the number of trips and fish sampled, along
+with the calculated sample sizes. The sample sizes were calculated as:
+
+\(N_{input} = N_{tows} + 0.138 * N_{fish}\)
+
+Input effN = \(N_{input}\) if \(N_{fish}/N_{tows}\) is \(<\) 44
+
+Input effN = \(7.06 * N_{tows}\)
 
 \subsection{Biological Data}\label{biological-data}
 
